# traceback

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONNECT.md  PLANS.md  README.md  SFT.MD  pyproject.toml  skills-lock.json
design-system/: AGENTS.md  AUDIT.md  DESIGN.md  FONTS.md  README.md  granola-extraction.md  tailwind-preset.js  tokens.css  tokens.json
design-system/examples/: index.html
docs/: frontend-design-audit.md
docs/plans/: 000-index.md  001-repo-grounding-and-command-freeze.REFERENCE.md  001-repo-grounding-and-command-freeze.md  002-atomic-forkpoint-seam.REFERENCE.md  002-atomic-forkpoint-seam.md  003-stochastic-witness-loop.REFERENCE.md  003-stochastic-witness-loop.md  004-legitimate-control-fixtures.REFERENCE.md  004-legitimate-control-fixtures.md  005-verifier-fix-and-release-proof.REFERENCE.md  005-verifier-fix-and-release-proof.md  006-demo-observability-and-publication.REFERENCE.md  006-demo-observability-and-publication.md  007-depth-two-and-research-extensions.REFERENCE.md  007-depth-two-and-research-extensions.md  008-qa-classifier-benchmark.REFERENCE.md  008-qa-classifier-benchmark.md  ASSUMPTIONS.md  GLOSSARY.md  REQUIREMENTS-MAP.md
envs/mongodb-sales-aggregation-engine/: env.py
envs/qabench/: README.md
fixtures/sft/: README.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  vite-env.d.ts
scripts/: bootstrap_external_deps.sh  forkproof-demo-v2-deploy-proof.py  forkproof-demo-v2-kill-proof.py  verify_external_deps.sh
(+690 files in other folders)
