[project]
name = "hack2fix2hack"
version = "0.1.0"
description = "ForkProof planning and integration scaffold for Hack2Fix2Hack."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "hud-python[modal]==0.6.4",
  "modal==1.5.0",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
harden-v0 = [
  "harbor",
  "litellm",
  "pydantic",
  "tenacity",
  "PyYAML",
  "python-dotenv",
  "tqdm",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.12",
]

[tool.uv]
package = false
